Create styles, modified js function

--- a/project/index.html
+++ b/project/index.html
@@ -9,12 +9,18 @@
     <title>Интернет-магазин</title>
 </head>
 <body>
-<header>
+<header class="header center">
     <button class="btn-cart" type="button">Корзина</button>
 </header>
-<main class="center">
-    <div class="products"></div>
+<main class="main center">
+    <div class="main__inner">
+        <div class="products"></div>
+    </div>
+
 </main>
+<footer class="footer center">
+    2020 (C) Geekbrains Student
+</footer>
 <script src="./js/main.js"></script>
 </body>
 </html>
