--- a/Lesson3/project/index.html
+++ b/Lesson3/project/index.html
@@ -5,11 +5,15 @@
     <title>Интернет-магазин</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/0716044f05.js"></script>
 </head>
 <body>
 <header>
     <div class="logo">Интернет-магазин</div>
     <button class="btn-cart" type="button">Корзина</button>
+    <div id="cart">
+        <p>Итого <span id="sumPrice"></span></p>
+    </div>
 </header>
 <main>
     <div class="products"></div>
