--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -17,8 +17,10 @@
 // g - множественный поиск
 // m - многострочный поиск
 
+/*
 let str = 'Язык JavaScript называется так из-за популярности языка Java';
 let regExp = new RegExp('java', 'ig');
+*/
 
 // Методы со стороны строки
 // search
@@ -35,7 +37,7 @@ let regExp = new RegExp('java', 'ig');
 // console.log('+7 (000)000-00-00'.replace('-', ':'));
 // console.log('+7 (000)000-00-00'.replace(/-/g, ':'));
 
-let name = 'Snow, John';
+//let name = 'Snow, John';
 // console.log(name.replace(/([a-z]+), ([a-z]+)/i, '$2 $1'));
 
 // Классы
@@ -79,7 +81,7 @@ let name = 'Snow, John';
 // console.log(/java/i.test(str));
 
 // exec
-let result;
+/*let result;
 let regExp2 = /java/ig;
 
 console.log(`Начальный индекс ${regExp2.lastIndex}`);
@@ -87,7 +89,35 @@ while (result = regExp2.exec(str)) {
     console.log(result);
     console.log(`Текущий индекс ${regExp2.lastIndex}`);
 }
-console.log(`Конечный индекс ${regExp2.lastIndex}`);
+console.log(`Конечный индекс ${regExp2.lastIndex}`);*/
+
+
+//Задания 1 и 2 для генерации кода и отработки различных вариантов регулярных выражений использовал
+//https://regex101.com/
+const regex = /(\s|\W)'/g;
+const str = `One: 'Hi Mary.'
+Two: 'Oh, hi.'
+One: 'How are you doing?'
+Two: 'I'm doing alright. How about you?'
+One: 'Not too bad. The weather is great isn't it?'
+Two: 'Yes. It's absolutely beautiful today.'
+One: 'I wish it was like this more frequently.'
+Two: 'Me too.'
+One: 'So where are you going now?'
+Two: 'I'm going to meet a friend of mine at the department store'
+One: 'Going to do a little shopping?'
+Two: 'Yeah, I have to buy some presents for my parents.'
+One: 'What's the occasion?'
+Two: 'It's their anniversary.'
+One: 'That's great. Well, you better get going. You don't want to be late.'
+Two: 'I'll see you next time.'
+One: 'Sure. Bye.'`;
+const subst = `$1"`;
+
+// The substituted value will be contained in the result variable
+const result = str.replace(regex, subst);
+
+console.log('Substitution result: ', result);
 </script>
 </body>
 </html>
