--- a/Lesson5/project/index.html
+++ b/Lesson5/project/index.html
@@ -12,17 +12,39 @@
         <div class="logo">Интернет-магазин</div>
         <div class="cart">
             <form action="#" class="search-form">
-                <input type="text" class="search-field">
-                <button class="btn-search" type="submit">
+                <input v-model="search" type="text" class="search-field">
+                <button @click.prevent="filter" class="btn-search" type="submit">
                     <i class="fas fa-search"></i>
                 </button>
             </form>
-            <button class="btn-cart" type="button">Корзина</button>
+            <!--Повесил событие клика, переключающее isVisible-->
+            <button @click="isVisible = !isVisible" class="btn-cart" type="button">Корзина</button>
+            <!--К сожалению, получилось только путем вставки функции computed-->
+            <div :class="[classObject, 'cart-block']">
+                <!--Аналогично реализовал переключением через функцию computed-->
+                <div :class="[emptyCart]">Корзина пуста</div>
+                <div class="cart-item" v-for="elem of productCart"  :key="elem.id_product">
+                    <div class="product-bio">
+                        <img :src="imgCatalog" alt="Some image">
+                        <div class="product-desc">
+                            <p class="product-title">{{elem.product_name}}</p>
+                            <p class="product-quantity">Количество: {{elem.quantity}}</p>
+                            <p class="product-single-price">{{elem.price}} за ед.</p>
+                        </div>
+                    </div>
+                    <div class="right-block">
+                        <p class="product-price">{{elem.quantity*elem.price}} ₽</p>
+                        <!--Повесил слушатель событий клика для уменьшения или удаления элементов корзины-->
+                        <button class="del-btn" @click="removeProduct(elem)" :key="elem.id_product">&times;</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <main>
         <div class="products">
-            <div class="product-item" v-for="product of products" :key="product.id_product">
+            <!--product.visibility - показывает видим ли мы элемент или нет-->
+            <div :class="[product.visibility, 'product-item']" v-for="product of products" :key="product.id_product">
                 <img :src="imgCatalog" alt="Some img">
                 <div class="desc">
                     <h3>{{product.product_name}}</h3>
@@ -33,7 +55,9 @@
         </div>
     </main>
 </div>
-<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
+        integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
+        crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/main.js"></script>
 </body>
