--- a/Lesson6/project/project_normal_variant/index.html
+++ b/Lesson6/project/project_normal_variant/index.html
@@ -7,27 +7,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div id="app">
-    <header>
-        <div class="logo">Интернет-магазин</div>
-        <div class="cart">
-            <form action="#" class="search-form" @submit.prevent="filter">
-                <input type="text" class="search-field" v-model="userSearch">
-                <button class="btn-search" type="submit">
-                    <i class="fas fa-search"></i>
-                </button>
-            </form>
-            <cart ref="cart"></cart>
-        </div>
-    </header>
-    <main>
-        <products ref="products"></products>
-    </main>
-</div>
-    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+    <div id="app">
+        <header>
+            <div class="logo">Интернет-магазин</div>
+            <div class="cart">
+                <filter-el ref="filter-el"></filter-el>
+                <cart ref="cart"></cart>
+            </div>
+        </header>
+        <main>
+            <products ref="products"></products>
+            <error ref="errorComp"></error>
+        </main>
+    </div>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
+            integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
+            crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="js/CartComp.js"></script>
-    <script src="js/ProducComp.js"></script>
+
+    <script src="js/Error.js"></script>
+    <script src="js/ProductComp.js"></script>
+    <script src="js/Filter.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
